WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310266
Apple Pay payment method change can crash web content process due to missing JS API lock during modifier lookup
https://bugs.webkit.org/show_bug.cgi?id=310266
Summary
Apple Pay payment method change can crash web content process due to missing ...
Abrar Rahman Protyasha
Reported
2026-03-19 02:12:44 PDT
rdar://171377627
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-03-19 02:19:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60924
EWS
Comment 2
2026-03-19 16:52:29 PDT
Committed
309587@main
(2df31cea4352): <
https://commits.webkit.org/309587@main
> Reviewed commits have been landed. Closing PR #60924 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug